--- a/mobilefirst/contact.html
+++ b/mobilefirst/contact.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--META DESCRIPTION SKAL LAVES-->
+    <meta name="description" content="..">
+
     <title>Kontakt</title>
 
+    <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="headerfooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap"
@@ -19,7 +24,7 @@
 <body>
     <!--links-->
     <header>
-        <img src="images/logo2.png" alt="logo">
+        <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
         <nav>
             <a href="omos.html">Om os</a>
             <a href="øl.html">Ølspecialiteter</a>
@@ -32,19 +37,19 @@
         </nav>
 
     </header>
-    
+
     <!--Bølger-->
     <main>
         <div class="topbillede"><img src="images/bølger/to-bølger.svg" alt="bølger"></div>
-    
-            <!--SIDENS HOVEDOVERSKRIFT-->
-            <section class="sideoverskrift">
-                <h1>Kontakt os</h1>
-            </section>
+
+        <!--SIDENS HOVEDOVERSKRIFT-->
+        <section class="sideoverskrift">
+            <h1>Kontakt os</h1>
+        </section>
 
         <section class="contact">
-                <!--Kontakttekst-->
-                <!--<section class="contactus">
+            <!--Kontakttekst-->
+            <!--<section class="contactus">
                     <p>Du er selvfølgelig altid velkommen til at kontakte os med de mindste spørgsmål - om det er
                         booking af lokaler til den næste firmafest, ølsmagning til et polterabend eller om du bare
                         er nysgerrig på, hvad den nyeste øl på hanerne er.
@@ -53,83 +58,83 @@
                     </p>
                 </section>-->
 
-                <!--Kontaktformular-->
-                <section>
-                    <div class="contactus">
-                        <p>Du er selvfølgelig altid velkommen til at kontakte os med de mindste spørgsmål - om det er
-                            booking af lokaler til den næste firmafest, ølsmagning til et polterabend eller om du bare
-                            er nysgerrig på, hvad den nyeste øl på hanerne er.
-                            Kontakt os på nedenstående kontaktformular og så vil vi selvfølgelig svare så hurtigt som
-                            muligt.
-                        </p>
-                    </div>
-                    <div class="contactformular">
-                        <input type="text" class="field" placeholder="Dit navn">
-                        <input type="text" class="field" placeholder="Din email">
-                        <textarea class="field-textarea" placeholder="Din besked"></textarea>
-                        <button type="button" class="btn">Send</button>
-                    </div>
-                </section>
+            <!--Kontaktformular-->
+            <section>
+                <div class="contactus">
+                    <p>Du er selvfølgelig altid velkommen til at kontakte os med de mindste spørgsmål - om det er
+                        booking af lokaler til den næste firmafest, ølsmagning til et polterabend eller om du bare
+                        er nysgerrig på, hvad den nyeste øl på hanerne er.
+                        Kontakt os på nedenstående kontaktformular og så vil vi selvfølgelig svare så hurtigt som
+                        muligt.
+                    </p>
+                </div>
+                <div class="contactformular">
+                    <input type="text" class="field" placeholder="Dit navn">
+                    <input type="text" class="field" placeholder="Din email">
+                    <textarea class="field-textarea" placeholder="Din besked"></textarea>
+                    <button type="button" class="btn">Send</button>
+                </div>
+            </section>
         </section>
 
-            <section class="kortudvalgbar">
-                <div><img src="images/væskebarny.jpg"></div>
-                <div class="textcontainer">
-                    <div class="find">
-                        <h1>Find baren her</h1>
-                        <p>
-                            Den centrale placering af baren er ideel. Du finder vores lille oase i en kælder ved enden af
-                            den hyggelige Jægergårdsgade og ud til den altid travlt Frederiksallé.
-                        </p>
-                    </div>
+        <section class="kortudvalgbar">
+            <div><img src="images/væskebarny.jpg"></div>
+            <div class="textcontainer">
+                <div class="find">
+                    <h1>Find baren her</h1>
+                    <p>
+                        Den centrale placering af baren er ideel. Du finder vores lille oase i en kælder ved enden af
+                        den hyggelige Jægergårdsgade og ud til den altid travlt Frederiksallé.
+                    </p>
+                </div>
 
-                    <br>
-                    <h1>Adresse</h1>
-                    <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
-                </div>
-            </section>
+                <br>
+                <h1>Adresse</h1>
+                <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+            </div>
+        </section>
 
-            <section class="kortudvalgshop">
-                <div class="textcontainer">
-                    <div class="find">
-                        <h1>Find shoppen her</h1>
-                        <p>
-                            Der hvor det hele startede; vores hyggelige flaskeshop. Den finder du på Vestergade omringet
-                            af hyggelige caféer og restauranter. Her er der noget for alle.<br><br>
-                            Kom forbi shoppen og stil en masse spørgsmål til vores dygtige personale, som altid er klar
-                            til at hjælpe.
-                        </p>
-                    </div>
-                    <br>
-                    <h1>Adresse</h1>
-                    <p>Vestergade 64, 8000 Aarhus</p>
+        <section class="kortudvalgshop">
+            <div class="textcontainer">
+                <div class="find">
+                    <h1>Find shoppen her</h1>
+                    <p>
+                        Der hvor det hele startede; vores hyggelige flaskeshop. Den finder du på Vestergade omringet
+                        af hyggelige caféer og restauranter. Her er der noget for alle.<br><br>
+                        Kom forbi shoppen og stil en masse spørgsmål til vores dygtige personale, som altid er klar
+                        til at hjælpe.
+                    </p>
                 </div>
-                <div><img src="images/væskebutik.jpg" alt=""></div>
-            </section>
- 
+                <br>
+                <h1>Adresse</h1>
+                <p>Vestergade 64, 8000 Aarhus</p>
+            </div>
+            <div><img src="images/væskebutik.jpg" alt=""></div>
+        </section>
 
-            <section class=openinghours>
-                <div class="firsttext">
-                    <h2>Barens åbningstider</h2>
-                    <p>Mandag: 14:00 - 00:00</p>
-                    <p>Tirsdag: 14:00 - 00:00</p>
-                    <p>Onsdag: 14:00 - 00:00</p>
-                    <p>Torsdag: 14:00 - 00:00</p>
-                    <p>Fredag: 12:00 - 02:00</p>
-                    <p>Lørdag: 12:00 - 02:00</p>
-                    <p>Søndag: 14:00 - 22:00</p>
-                </div>
-                <div class="secondtext">
-                    <h2>Flaskeshoppens åbningstider</h2>
-                    <p>Mandag: 12:00-19:00</p>
-                    <p>Tirsdag: 12:00-19:00</p>
-                    <p>Onsdag: 12:00-19:00</p>
-                    <p>Torsdag: 12:00-20:00</p>
-                    <p>Fredag: 11:00-22:00</p>
-                    <p>Lørdag: 11:00-20:00</p>
-                    <p>Søndag: Lukket</p>
-                </div>
-            </section>
+
+        <section class=openinghours>
+            <div class="firsttext">
+                <h2>Barens åbningstider</h2>
+                <p>Mandag: 14:00 - 00:00</p>
+                <p>Tirsdag: 14:00 - 00:00</p>
+                <p>Onsdag: 14:00 - 00:00</p>
+                <p>Torsdag: 14:00 - 00:00</p>
+                <p>Fredag: 12:00 - 02:00</p>
+                <p>Lørdag: 12:00 - 02:00</p>
+                <p>Søndag: 14:00 - 22:00</p>
+            </div>
+            <div class="secondtext">
+                <h2>Flaskeshoppens åbningstider</h2>
+                <p>Mandag: 12:00-19:00</p>
+                <p>Tirsdag: 12:00-19:00</p>
+                <p>Onsdag: 12:00-19:00</p>
+                <p>Torsdag: 12:00-20:00</p>
+                <p>Fredag: 11:00-22:00</p>
+                <p>Lørdag: 11:00-20:00</p>
+                <p>Søndag: Lukket</p>
+            </div>
+        </section>
         </section>
     </main>
 
