--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -1,127 +1,143 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--META DESCRIPTION SKAL LAVES-->
+    <meta name="description" content="..">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="headerfooter.css">
     <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap"
+        rel="stylesheet">
     <title>Om os</title>
 
     <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<!--HEADER-->
-<header>
-    <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
-    
-    <nav>
-        <a href="omos.html">Om os</a>
-        <a href="øl.html">Ølspecialiteter</a>
-        <a href="begivenheder.html">Begivenheder</a>
-        <a href="contact.html">Kontakt</a>
-    </nav>
+    <!--HEADER-->
+    <header>
+        <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
 
-    <nav class="navmobil"></nav>
-</header>
+        <nav>
+            <a href="omos.html">Om os</a>
+            <a href="øl.html">Ølspecialiteter</a>
+            <a href="begivenheder.html">Begivenheder</a>
+            <a href="contact.html">Kontakt</a>
+        </nav>
 
-<main>
+        <nav class="navmobil"></nav>
+    </header>
 
-<!--BAGGRUNDSBILLEDE-->
-<section class="billedeet">
-    <div class="billedeet"></div>
-</section>
+    <main>
 
-<!--BØLGE-->
-<section class="wave">
-    <div class="wave">
-        <img src="images/bølger/to-bølger.svg" alt="wave">
-    </div>
-</section>
-
-<!--FØRSTE SECTION MED TEKST-->
-<section class="overskrift">
-    <h1>Om os</h1>
-</section>
-
-    <section class="sectionet">
-        <div class="divet">
-            <p>Én af de mange værdier for os her hos Væskebalancen er nærvær og fællesskab. Det har altid været vigtigt for os at give plads til alle og lære fra os på bedste vis. Vi ser ikke specialøl som en niche - vi ser specialøl, som noget der skal deles. Om det er med venner eller fremmede, det er op til dig. 
-            </p>
-        </div>
-    </section>
-
-<!--ANDEN SECTION MED TEKST OG BILLEDE-->
-    <section class="sectionto">
-        <div class="billedeto"></div>
-        <div class="divto">
-            <h1>Startskuddet</h1>
-            <p>Startskuddet til det vi kender som Væskebalancen startede under første nedlukning, hvor vi åbnede vores flaskeshop i Vestergade. Det blev hurtigt en succes og interessen for specialøl blev kun ved med at vokse.</p>
-
-            <p>Da vi fik udvidet til baren nede i Jægergårdsgade kunne vi for alvor se, at det havde været en gemt guldgrube. I samarbejde med Mig og Ølsnedkeren fik vi skabt vores eget stykke af paradis i en lille kælder ud til Frederiksallé. 
-            </p>
-        </div>
-    </section>
-
-<!--TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE-->
-    <section class="sectiontre">
-        <div class="divtre">
-            <p>Vores kompetente personale står altid klar med smagsprøver og et smil på læben, så kom forbi og se om det også kunne blive dit helt eget stykke af paradis i en travl hverdag. 
-            Vi ses. </p>
-        </div>
-    </section>
-
-    <section class="wavetwo">
-        <div class="wavetwo">
-        <img src="images/bølger/en-bølge.svg" alt="enbølge">
-        </div>    
-    </section>
-
-<!--FOOTER-->
-<footer>
-    <img src="images/bølger/to-bølger-omvendt.svg" class="to-bølger-omvendt" alt="omvendte bølger">
-    <section>
-        <section class="socials">
-            <h1>Væskebalancen bar</h1>
-
-            <div class="ikoner">
-                <a href="#"><i class="fa-brands fa-square-facebook fa-3x"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
-                <a href="#"><i class="fa-brands fa-untappd fa-3x"></i></a>
-            </div>
-
+        <!--BAGGRUNDSBILLEDE-->
+        <section class="billedeet">
+            <div class="billedeet"></div>
         </section>
 
-        <section class="adresse-tlf">
-            <div>
-                <h2>Adresse</h2>
-                <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
-            </div>
-
-            <div>
-                <h2>Telefonnummer</h2>
-                <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
+        <!--BØLGE-->
+        <section class="wave">
+            <div class="wave">
+                <img src="images/bølger/to-bølger.svg" alt="wave">
             </div>
         </section>
 
-        <div>
-            <h2>Åbningstider</h2>
-            <ul>
-                <li>Mandag: <time>14:00</time> - <time>00:00</time></li>
-                <li>Tirsdag: <time>14:00</time> - <time>00:00</time></li>
-                <li>Onsdag: <time>14:00</time> - <time>00:00</time></li>
-                <li>Torsdag: <time>14:00</time> - <time>00:00</time></li>
-                <li>Fredag: <time>12:00</time> - <time>02:00</time></li>
-                <li>Lørdag: <time>12:00</time> - <time>02:00</time></li>
-                <li>Søndag: <time>14:00</time> - <time>22:00</time></li>
-            </ul>
-        </div>
-    </section>
+        <!--FØRSTE SECTION MED TEKST-->
+        <section class="overskrift">
+            <h1>Om os</h1>
+        </section>
 
-</footer>
-</main>
-    
+        <section class="sectionet">
+            <div class="divet">
+                <p>Én af de mange værdier for os her hos Væskebalancen er nærvær og fællesskab. Det har altid været
+                    vigtigt for os at give plads til alle og lære fra os på bedste vis. Vi ser ikke specialøl som en
+                    niche - vi ser specialøl, som noget der skal deles. Om det er med venner eller fremmede, det er op
+                    til dig.
+                </p>
+            </div>
+        </section>
+
+        <!--ANDEN SECTION MED TEKST OG BILLEDE-->
+        <section class="sectionto">
+            <div class="billedeto"></div>
+            <div class="divto">
+                <h1>Startskuddet</h1>
+                <p>Startskuddet til det vi kender som Væskebalancen startede under første nedlukning, hvor vi åbnede
+                    vores flaskeshop i Vestergade. Det blev hurtigt en succes og interessen for specialøl blev kun ved
+                    med at vokse.</p>
+
+                <p>Da vi fik udvidet til baren nede i Jægergårdsgade kunne vi for alvor se, at det havde været en gemt
+                    guldgrube. I samarbejde med Mig og Ølsnedkeren fik vi skabt vores eget stykke af paradis i en lille
+                    kælder ud til Frederiksallé.
+                </p>
+            </div>
+        </section>
+
+        <!--TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE-->
+        <section class="sectiontre">
+            <div class="divtre">
+                <p>Vores kompetente personale står altid klar med smagsprøver og et smil på læben, så kom forbi og se om
+                    det også kunne blive dit helt eget stykke af paradis i en travl hverdag.
+                    Vi ses. </p>
+            </div>
+        </section>
+
+        <section class="wavetwo">
+            <div class="wavetwo">
+                <img src="images/bølger/en-bølge.svg" alt="enbølge">
+            </div>
+        </section>
+
+        <!--FOOTER-->
+        <footer>
+            <img src="images/bølger/to-bølger-omvendt.svg" class="to-bølger-omvendt" alt="omvendte bølger">
+            <section>
+                <section class="socials">
+                    <h1>Væskebalancen bar</h1>
+
+                    <div class="ikoner">
+                        <a href="#"><i class="fa-brands fa-square-facebook fa-3x"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
+                        <a href="#"><i class="fa-brands fa-untappd fa-3x"></i></a>
+                    </div>
+
+                </section>
+
+                <section class="adresse-tlf">
+                    <div>
+                        <h2>Adresse</h2>
+                        <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+                    </div>
+
+                    <div>
+                        <h2>Telefonnummer</h2>
+                        <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
+                    </div>
+                </section>
+
+                <div>
+                    <h2>Åbningstider</h2>
+                    <ul>
+                        <li>Mandag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Tirsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Onsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Torsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Fredag: <time>12:00</time> - <time>02:00</time></li>
+                        <li>Lørdag: <time>12:00</time> - <time>02:00</time></li>
+                        <li>Søndag: <time>14:00</time> - <time>22:00</time></li>
+                    </ul>
+                </div>
+            </section>
+
+        </footer>
+    </main>
+
 </body>
+
 </html>
