--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--META DESCRIPTION SKAL LAVES-->
+    <meta name="description"
+    content="..">
+
     <title>Væskebalancen</title>
     <link rel="stylesheet" href="forside.css">
     <link rel="stylesheet" href="headerfooter.css">
@@ -19,7 +24,7 @@
 
 <body>
     <header>
-        <img src="images/logo2.png" alt="logo">
+        <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
 
         <nav>
             <a href="omos.html">Om os</a>
@@ -114,8 +119,6 @@
             </div>
         </section>
 
-    
-<hr>
 
     </main>
 
