en mase ændringer sjdklfdj
har forsøgt at gøre header og footer responsiv + ølsiden

--- a/mobilefirst/contact.html
+++ b/mobilefirst/contact.html
@@ -25,7 +25,8 @@
     <!--links-->
     <header>
         <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
-        <nav>
+
+        <nav class="navlaptop">
             <a href="omos.html">Om os</a>
             <a href="øl.html">Ølspecialiteter</a>
             <a href="begivenheder.html">Begivenheder</a>
@@ -33,7 +34,7 @@
         </nav>
 
         <nav class="navmobil">
-            <i class="fa-solid fa-bars"></i>
+            <a href="menu.html"> <i class="fa-solid fa-bars fa-3x"></i></a>
         </nav>
 
     </header>
@@ -152,32 +153,33 @@
 
             </section>
 
-            <section class="adresse-tlf">
+            <section class="adresse-åbning">
+                <section class="adresse-tlf">
+                    <div class="adresse">
+                        <h2>Adresse</h2>
+                        <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+                    </div>
+    
+                    <div class="tlf">
+                        <h2>Telefonnummer</h2>
+                        <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
+                    </div>
+                </section>
+    
                 <div>
-                    <h2>Adresse</h2>
-                    <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
-                </div>
-
-                <div>
-                    <h2>Telefonnummer</h2>
-                    <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
+                    <h2>Åbningstider</h2>
+                    <ul>
+                        <li>Mandag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Tirsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Onsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Torsdag: <time>14:00</time> - <time>00:00</time></li>
+                        <li>Fredag: <time>12:00</time> - <time>02:00</time></li>
+                        <li>Lørdag: <time>12:00</time> - <time>02:00</time></li>
+                        <li>Søndag: <time>14:00</time> - <time>22:00</time></li>
+                    </ul>
                 </div>
             </section>
-
-            <div>
-                <h2>Åbningstider</h2>
-                <ul>
-                    <li>Mandag: <time>14:00</time> - <time>00:00</time></li>
-                    <li>Tirsdag: <time>14:00</time> - <time>00:00</time></li>
-                    <li>Onsdag: <time>14:00</time> - <time>00:00</time></li>
-                    <li>Torsdag: <time>14:00</time> - <time>00:00</time></li>
-                    <li>Fredag: <time>12:00</time> - <time>02:00</time></li>
-                    <li>Lørdag: <time>12:00</time> - <time>02:00</time></li>
-                    <li>Søndag: <time>14:00</time> - <time>22:00</time></li>
-                </ul>
-            </div>
         </section>
-
     </footer>
 
 
