--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header> <!--hej-->
         <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
 
         <nav class="navlaptop">
