--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header> <!--hej-->
+    <header>
         <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
 
         <nav class="navlaptop">
@@ -43,8 +43,8 @@
         <div class="topbillede"><img src="images/bølger/to-bølger.svg" alt="bølger"></div>
 
 
-        <!--SIDENS HOVEDOVERSKRIFT-->
-        <section class="sideoverskrift">
+        <!--SIDENS HOVEDOVERIFT-->
+        <section class="sideoverift">
             <h1>Ølspecialiteter</h1>
         </section>
 
@@ -77,7 +77,7 @@
                         <li>
                             <div>
                                 <h3>1. Bayreuther Original</h3>
-                                <p class="pris">30 / 55 kr</p>
+                                <p class="pris">30 / 55</p>
                             </div>
                             <div>
                                 <p>Helles lager 5,3%</p>
@@ -88,17 +88,17 @@
                         <li>
                             <div>
                                 <h3>2. Maisel’s Original</h3>
-                                <p class="pris">30 / 55 kr</p>
+                                <p class="pris">30 / 55</p>
                             </div>
                             <div>
                                 <p>Weissbier 5,1%</p>
-                                <p>Mild, krydret af malt, frugt og nelliker med et strejf af af muskatnød</p>
+                                <p>Mild,ydret af malt, frugt og nelliker med et strejf af af muskatnød</p>
                             </div>
                         </li>
                         <li>
                             <div>
                                 <h3>3. Thornbridge Cocoa Wonderland</h3>
-                                <p class="pris">40 / 70 kr</p>
+                                <p class="pris">40 / 70</p>
                             </div>
                             <div>
                                 <p>Porter 6,8%</p>
@@ -108,27 +108,27 @@
                         <li>
                             <div>
                                 <h3>4. Sudden death</h3>
-                                <p class="pris">35 / 65 kr</p>
+                                <p class="pris">35 / 65</p>
                             </div>
                             <div>
                                 <p>O.fest bier 5,8%</p>
-                                <p>Fyldig og karamelagtig maltkrop</p>
+                                <p>Fyldig og karamelagtig malop</p>
                             </div>
                         </li>
                         <li>
                             <div>
                                 <h3>5. Siren Suspended in Ella</h3>
-                                <p class="pris">35 / 65 kr</p>
+                                <p class="pris">35 / 65</p>
                             </div>
                             <div>
                                 <p>Pale ale 4%</p>
-                                <p>Mild, men med en god eftersmag af krydret malt</p>
+                                <p>Mild, men med en god eftersmag afydret malt</p>
                             </div>
                         </li>
                         <li>
                             <div>
                                 <h3>6. Amundsen</h3>
-                                <p class="pris">50 / 90 kr</p>
+                                <p class="pris">50 / 90</p>
                             </div>
 
                             <div>
@@ -140,7 +140,7 @@
                         <li>
                             <div>
                                 <h3>7. Slowburn Vixen</h3>
-                                <p class="pris">40 / 70 kr</p>
+                                <p class="pris">40 / 70</p>
                             </div>
                             <div>
                                 <p>West coast IPA 6,5%</p>
@@ -158,7 +158,7 @@
                         <li>
                             <div>
                                 <h3>8. Sudden death</h3>
-                                <p class="pris">50 / 90 kr</p>
+                                <p class="pris">50 / 90</p>
                             </div>
                             <div>
                                 <p>NE DIPA 8%</p>
@@ -168,7 +168,7 @@
                         <li>
                             <div>
                                 <h3>9. Gamma Crimmus</h3>
-                                <p class="pris">40 / 70 kr</p>
+                                <p class="pris">40 / 70</p>
                             </div>
                             <div>
                                 <p>IPA 6%</p>
@@ -178,7 +178,7 @@
                         <li>
                             <div>
                                 <h3>10. Indeed</h3>
-                                <p class="pris">40 / 70 kr</p>
+                                <p class="pris">40 / 70</p>
                             </div>
                             <div>
                                 <p>Strawberry sour 5%</p>
@@ -188,7 +188,7 @@
                         <li>
                             <div>
                                 <h3>11. Holy goat Funk Weapon</h3>
-                                <p class="pris">55 / 100 kr</p>
+                                <p class="pris">55 / 100</p>
                             </div>
                             <div>
                                 <p>Mixed ferm sour 5,8%</p>
@@ -198,7 +198,7 @@
                         <li>
                             <div>
                                 <h3>12. Timmermans Gordons X-mas</h3>
-                                <p class="pris">35 / 65 kr</p>
+                                <p class="pris">35 / 65</p>
                             </div>
                             <div>
                                 <p>Dubbel 8,8%</p>
@@ -208,7 +208,7 @@
                         <li>
                             <div>
                                 <h3>13. V. Br., Whipped Nougat Chocolate</h3>
-                                <p class="pris">45 / 80 kr</p>
+                                <p class="pris">45 / 80</p>
                             </div>
                             <div>
                                 <p>Stout 7%</p>
@@ -218,7 +218,7 @@
                         <li>
                             <div>
                                 <h3>14. V. Br., Coconut Milk Chocolate</h3>
-                                <p class="pris">50 / 90 kr</p>
+                                <p class="pris">50 / 90</p>
                             </div>
                             <div>
                                 <p>Stout 10%</p>
