responsiv header-footer og øl

--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -44,7 +44,7 @@
 
 
         <!--SIDENS HOVEDOVERIFT-->
-        <section class="sideoverift">
+        <section class="sideoverskrift">
             <h1>Ølspecialiteter</h1>
         </section>
 
