--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -59,7 +59,8 @@
         <section class="sectionet">
             <div class="divet">
                 <p>Én af de mange værdier for os her hos Væskebalancen er nærvær og fællesskab. Det har altid været
-                    vigtigt for os at give plads til alle og lære fra os på bedste vis. Vi ser ikke specialøl som en
+                    vigtigt for os at give plads til alle og lære fra os på bedste vis. 
+                    <br> <br>Vi ser ikke specialøl som en
                     niche - vi ser specialøl, som noget der skal deles. Om det er med venner eller fremmede, det er op
                     til dig.
                 </p>
@@ -87,7 +88,7 @@
             <div class="divtre">
                 <p>Vores kompetente personale står altid klar med smagsprøver og et smil på læben, så kom forbi og se om
                     det også kunne blive dit helt eget stykke af paradis i en travl hverdag.
-                    Vi ses. </p>
+                    <br><br>Vi ses. </p>
             </div>
         </section>
 
