--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--META DESCRIPTION SKAL LAVES-->
-    <meta name="description" content="..">
+    <meta name="description" content="Væskebalancen startede som en lille flaskeshop i Vestergade. Vi har efterhånden udvidet til en bar, hvor vi ønsker at dele vores interesse for specialøl med jer.">
 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="headerfooter.css">
