--- a/mobilefirst/menu.html
+++ b/mobilefirst/menu.html
@@ -1,49 +1,86 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap"
+        rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
+    <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
+
     <title>Menu</title>
     <style>
-        nav{
-            width:100%;
-
-            display:flex;            
-            align-items:center;
-            flex-direction:column;
-            gap:10px;
+        body {
+            background-color: #0e1e24;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        nav a{
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            text-transform:uppercase;
-            text-decoration:none;
-            font-size:15pt;
-            color:#CEA948;
-            width:100%;
-            text-align:center;
-            padding-top:5px;
-            padding-bottom:5px;
+        nav {
+            width: 100%;
+
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+
         }
 
-        nav a:hover{
-            background-color:#204653;
+        nav a {
+            font-family: 'Playfair Display SC', serif;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-size: 15pt;
+            color: #CEA948;
+            width: 100%;
+            text-align: center;
+            padding-top: 5px;
+            padding-bottom: 5px;
         }
 
-        nav img{
-            width:40%;
+        nav a:hover {
+            background-color: #204653;
+        }
+
+        img {
+            width: 100%;
+            margin-top: 50%;
+            margin-bottom: 10%;
+        }
+
+        /*IKONER*/
+        .fa-brands {
+            padding: 10px;
+            color: #CEA948;
+        }
+
+        .ikoner{
+            margin-top: 10%;
+            margin-bottom: 50%;
         }
     </style>
 </head>
+
 <body>
+    <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
+
     <nav>
         <a href="index.html">Hjem</a>
         <a href="omos.html">Om os</a>
         <a href="øl.html">Ølspecialiteter</a>
         <a href="begivenheder.html">Begivenheder</a>
-        <a href="#">Kontakt</a>
+        <a href="contact.html">Kontakt</a>
     </nav>
+
+    <div class="ikoner">
+        <a href="#"><i class="fa-brands fa-square-facebook fa-3x"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        <a href="#"><i class="fa-brands fa-untappd fa-3x"></i></a>
+    </div>
 </body>
+
 </html>
