Meta description på alle

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--META DESCRIPTION SKAL LAVES-->
-    <meta name="description" content="..">
+    <meta name="description" content="Hos os er det ikke kun øllene, som lokker. Vi byder på brætspil, quiz, fodboldkampe på storskærm og mange flere events. Hos os er alle altid velkomne.">
 
     <title>Begivenheder</title>
 
