--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -8,7 +8,7 @@
     
     <!--META DESCRIPTION SKAL LAVES-->
     <meta name="description"
-    content="..">
+    content="Hvis du mangler et sted med god stemning, brætspil, kolde øl og fodboldkamp på storskærm, så besøg os i Væskebalancen baren i kælderen på Jægergårdsgade 2A.">
 
     <title>Væskebalancen</title>
     <link rel="stylesheet" href="forside.css">
