--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--META DESCRIPTION SKAL LAVES-->
-    <meta name="description" content="..">
+    <meta name="description" content="Vi har 14 øl på haner, kolde dåser og flasker i køleskabet. Hanerne bliver skiftet ud tre gange om ugen. Kom ned og smag – om du er til Weissbier eller Pale ale.">
 
     <title>Ølspecialiteter</title>
 
