--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -91,6 +91,8 @@
         
 
     <!--instagramfeed-->
+
+    <section class="overskriftinstagram"><h1>Instagram</h1></section>
         <section class="instacontainer">
             <div>
                 <img src="images/instaimages/fadøl.jpg" alt="">
@@ -119,6 +121,8 @@
             </div>
         </section>
 
+    
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2222.529060465896!2d10.194452915825906!3d56.14795668066096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c3f238e82a0df%3A0x44926c352f1f154f!2sV%C3%A6skebalancen%20Bar!5e0!3m2!1sda!2sdk!4v1668596665979!5m2!1sda!2sdk" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </main>
 
