lidt forside, men det sejler :DD

--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -51,7 +51,7 @@
 
         <!--Kort et-->
         <section class="cardsforside">
-            <div><img src="images/omoskort.png" alt=""></div>
+            <div class="imgforside"><img src="images/omoskort.png" alt=""></div>
             <div class="textforside">
                 <h2>Om os</h2>
                 <p>Interessen for specialøl og nye smage stiger. Få smagsprøver og anbefalinger fra personalet og udvid
@@ -73,13 +73,13 @@
                 </p>
                 <a href="øl.html" class="button">Læs mere</a>
             </div>
-            <div><img src="images/ølspecialiteterkort.png" alt=""></div>
+            <div class="imgforside"><img src="images/ølspecialiteterkort.png" alt=""></div>
         </section>
 
 
         <!--Kort tre-->
         <section class="cardsforside">
-            <div><img src="images/begivenhederkort.png" alt=""></div>
+            <div class="imgforside"><img src="images/begivenhederkort.png" alt=""></div>
             <div class="textforside">
                 <h2>Begivenheder</h2>
                 <p>Se fodbold i fællesskab på vores fladskærm, spil diverse brætspil eller kom til tirsdagsquiz.
