--- a/mobilefirst/contact.html
+++ b/mobilefirst/contact.html
@@ -50,14 +50,6 @@
 
         <section class="contact">
             <!--Kontakttekst-->
-            <!--<section class="contactus">
-                    <p>Du er selvfølgelig altid velkommen til at kontakte os med de mindste spørgsmål - om det er
-                        booking af lokaler til den næste firmafest, ølsmagning til et polterabend eller om du bare
-                        er nysgerrig på, hvad den nyeste øl på hanerne er.
-                        Kontakt os på nedenstående kontaktformular og så vil vi selvfølgelig svare så hurtigt som
-                        muligt.
-                    </p>
-                </section>-->
 
             <!--Kontaktformular-->
             <section>
@@ -65,7 +57,7 @@
                     <p>Du er selvfølgelig altid velkommen til at kontakte os med de mindste spørgsmål - om det er
                         booking af lokaler til den næste firmafest, ølsmagning til et polterabend eller om du bare
                         er nysgerrig på, hvad den nyeste øl på hanerne er.
-                        Kontakt os på nedenstående kontaktformular og så vil vi selvfølgelig svare så hurtigt som
+                        <br><br>Kontakt os på nedenstående kontaktformular og så vil vi selvfølgelig svare så hurtigt som
                         muligt.
                     </p>
                 </div>
@@ -96,6 +88,7 @@
         </section>
 
         <section class="kortudvalgshop">
+            <div><img src="images/væskebutik.jpg" alt=""></div>
             <div class="textcontainer">
                 <div class="find">
                     <h1>Find shoppen her</h1>
@@ -110,7 +103,7 @@
                 <h1>Adresse</h1>
                 <p>Vestergade 64, 8000 Aarhus</p>
             </div>
-            <div><img src="images/væskebutik.jpg" alt=""></div>
+            
         </section>
 
 
