--- a/mobilefirst/menu.html
+++ b/mobilefirst/menu.html
@@ -34,6 +34,7 @@
             font-family: 'Playfair Display SC', serif;
             text-transform: uppercase;
             text-decoration: none;
+            letter-spacing: 2px;
             font-size: 15pt;
             color: #CEA948;
             width: 100%;
