--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -58,8 +58,7 @@
                     din ølhorisont.
                     Vi ser ikke specialøl som en niche, vi ser specialøl som noget der skal deles.
                 </p>
-                <a href="omos.html" class="button">Læs mere</a>
-
+                <div><a href="omos.html" class="button">Læs mere</a></div>
             </div>
         </section>
 
@@ -71,7 +70,7 @@
                 <p>Vi tilbyder 14 forskellige øl på fad som ugentligt bliver udskiftet.
                     Vi har desuden et stort udvalg af dåse og flaskeøl.
                 </p>
-                <a href="øl.html" class="button">Læs mere</a>
+                <div><a href="øl.html" class="button">Læs mere</a></div>
             </div>
             <div class="imgforside"><img src="images/ølspecialiteterkort.png" alt=""></div>
         </section>
@@ -85,7 +84,7 @@
                 <p>Se fodbold i fællesskab på vores fladskærm, spil diverse brætspil eller kom til tirsdagsquiz.
                     Vi tilbyder desuden ud-af-huset-ølsmagninger.
                 </p>
-                <a href="begivenheder.html" class="button">Læs mere</a>
+                <div><a href="begivenheder.html" class="button">Læs mere</a></div>
             </div>
         </section>
         
@@ -107,7 +106,7 @@
             </div>
         </section>
     
-        <section class="secondinstacontainer">
+        <section class="instacontainer">
             <div>
                 <img src="images/instaimages/sign.jpg" alt="">
             </div>
