--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -97,7 +97,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>3. Thornbridge Cocoa Wonderland</h3>
+                                <h3>3. Thornbridge Cocoa W.</h3>
                                 <p class="pris">40 / 70</p>
                             </div>
                             <div>
@@ -187,7 +187,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>11. Holy goat Funk Weapon</h3>
+                                <h3>11. Holy goat F. W.</h3>
                                 <p class="pris">55 / 100</p>
                             </div>
                             <div>
@@ -197,7 +197,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>12. Timmermans Gordons X-mas</h3>
+                                <h3>12. T. Gordons X-mas</h3>
                                 <p class="pris">35 / 65</p>
                             </div>
                             <div>
@@ -207,7 +207,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>13. V. Br., Whipped Nougat Chocolate</h3>
+                                <h3>13. V. Br., W. Nougat Ch.</h3>
                                 <p class="pris">45 / 80</p>
                             </div>
                             <div>
@@ -217,7 +217,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>14. V. Br., Coconut Milk Chocolate</h3>
+                                <h3>14. V. Br., Coco. Milk Ch.</h3>
                                 <p class="pris">50 / 90</p>
                             </div>
                             <div>
