--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--META DESCRIPTION SKAL LAVES-->
-    <meta name="description" content="Vi har 14 øl på haner, kolde dåser og flasker i køleskabet. Hanerne bliver skiftet ud tre gange om ugen. Kom ned og smag – om du er til Weissbier eller Pale ale.">
+    <meta name="description"
+        content="Vi har 14 øl på haner, kolde dåser og flasker i køleskabet. Hanerne bliver skiftet ud tre gange om ugen. Kom ned og smag – om du er til Weissbier eller Pale ale.">
 
     <title>Ølspecialiteter</title>
 
@@ -253,13 +254,13 @@
                         <h2>Adresse</h2>
                         <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
                     </div>
-    
+
                     <div class="tlf">
                         <h2>Telefonnummer</h2>
                         <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
                     </div>
                 </section>
-    
+
                 <div>
                     <h2>Åbningstider</h2>
                     <ul>
