--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -118,7 +118,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>5. Siren Suspended in Ella</h3>
+                                <h3>5. Siren S. in Ella</h3>
                                 <p class="pris">35 / 65</p>
                             </div>
                             <div>
