--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -56,31 +56,8 @@
 
     <!--Sektionerne på siden-->
 
-    <!--Sektion 1-->
-    <section class=sektioner>
-        <div class="container"><img src="images/hygge.png" alt=""></div>
-        <div class="text">
-            <h2>Hygge</h2>
-            <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med
-                studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
-        </div>
-    </section>
-
-    <!--Sektion 2-->
-    <section class=sektioner>
-        <div class="text">
-            <h2>Brætspil</h2>
-            <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at
-                bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og
-                en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
-        </div>
-        <div class="container"><img src="images/brætspil.png" alt=""></div>
-    </section>
-
-    <section class="waveto"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
-
-    <!--Sektion 3-->
-    <section class="nederste-sektioner">
+     <!--Sektion 1-->
+     <section class="nederste-sektioner">
         <section class=sektioner>
             <div class="container"><img src="images/ølsmagninger.jpg" alt=""></div>
             <div class="text">
@@ -92,15 +69,45 @@
             </div>
         </section>
     
-        <!--Sektion 4-->
+        <!--Sektion 2-->
         <section class=sektioner>
             <div class="text">
                 <h2>Fodbold</h2>
                 <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste
                     kampe på fladskærm. Fodbold, glade venner og en kold fadøl - whats not to like? </p>
+                    <a href="#" class="button">Læs mere</a>
             </div>
             <div class="container"><img src="images/fodbold.png" alt=""></div>
         </section>
+
+
+
+    <section class="waveto"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
+
+        <!--Sektion 3-->
+        <section class=sektioner>
+            <div class="container"><img src="images/hygge.png" alt=""></div>
+            <div class="text">
+                <h2>Hygge</h2>
+                <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med
+                    studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
+                    <a href="#" class="button">Læs mere</a>
+            </div>
+        </section>
+    
+        <!--Sektion 4-->
+        <section class=sektioner>
+            <div class="text">
+                <h2>Brætspil</h2>
+                <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at
+                    bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og
+                    en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
+                    <a href="#" class="button">Læs mere</a>
+            </div>
+            <div class="container"><img src="images/brætspil.png" alt=""></div>
+        </section>
+
+
 
         <section class="wavetre"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
     </section>
